De la typo, encore, et toujours

--- a/Rmarkdown/1-decouvrir-les-donnees.Rmd
+++ b/Rmarkdown/1-decouvrir-les-donnees.Rmd
@@ -1,6 +1,6 @@
 # Découvrir les données {#decouvrir}
 
-Une question est apparue spontanément. Qui sont les associations françaises ? Répondre à cette question en amène directement d'autres. Où sont-elles? Combien sont-elles ? Quand ont-elles été créées ? Quel est leur objet ? Pour cela, on a récupérer le fichier du Répertoire National des Associations sur le site <https://data.gouv.fr>. Ce site est une tentative de rendre ouverte les données publiques françaises et de nombreux acteurs publient leurs jeux de données : collectivités territoriales, ministères, etc. Cela va d'un fichier de données sur les associations, aux dotations perçues par les communes au nombre de médecins par département et par spécialité. Il en existe d'autres comme le site de l'INSEE. Celui-ci provient tout de même d'une volonté explicite de publiciser les données produites par l'Etat.
+Une question est apparue spontanément. Qui sont les associations françaises ? Répondre à cette question en amène directement d'autres. Où sont-elles? Combien sont-elles ? Quand ont-elles été créées ? Quel est leur objet ? Pour cela, on a récupérer le fichier du Répertoire National des Associations sur le site <https://data.gouv.fr>. Ce site est une tentative de rendre ouverte les données publiques françaises et de nombreux acteurs publient leurs jeux de données : collectivités territoriales, ministères, etc. Cela va d'un fichier de données sur les associations, aux dotations perçues par les communes au nombre de médecins par département et par spécialité. Il en existe d'autres comme le site de l'INSEE. Celui-ci provient tout de même d'une volonté explicite de publiciser les données produites par l’État.
 
 ## Aller chercher les données sur le site Data.gouv.fr
 
@@ -28,7 +28,7 @@ On devrait donc avoir toutes ses informations. C'est super déjà si c'est le ca
 
 ### Découvrons les données
 
-Ouvrons ce fichier. On peut d'abord y voir le nom exact du jeu de données correspondant au tableau qui suit :![Nom du jeu de données](Material-Rmarkdown/02-documentation-waldec-titre.png). Concrètement ça veut dire que le tableau qui suivra ce titre va expliciter les données pour chaque fichier qui aura un nom sous la forme "rna_waldec" suivi de "YYYYMMDD". "YYYYMMDD" correspondant à une date : les quatre "Y" représentent l'année (*year* en anglais), par exemple 2020, "M" représente le mois et "D" le jour (*day* en anglais). 
+Ouvrons ce fichier. On peut d'abord y voir le nom exact du jeu de données correspondant au tableau qui suit :![Nom du jeu de données](Material-Rmarkdown/02-documentation-waldec-titre.png). Concrètement ça veut dire que le tableau qui suivra ce titre va expliciter les données pour chaque fichier qui aura un nom sous la forme "rna_import" suivi de "YYYYMMDD". "YYYYMMDD" correspondant à une date : les quatre "Y" représentent l'année (*year* en anglais), par exemple 2020, "M" représente le mois et "D" le jour (*day* en anglais). 
 
 Et les variables ? ![Variables du jeu de données](Material-Rmarkdown/02-documentation-waldec-variables.png)
 
@@ -41,13 +41,13 @@ Téléchargeons un des dossiers correspondant à "rna_waldec". Celui du 01 septe
 
 De nombreux fichiers apparaissent. Ils ont tous un nom sous la forme "rna_waldec", suivi de la date, puis de "dpt" et d'un numéro. On peut pré-supposer assez facilement que ces deux derniers items sont le numéro de département et que donc nos données sont subdivisées par département. Un fichier correspond donc à un département. Mais que veut dire le ".csv" à la fin de chaque nom de fichier ?
 
-Un fichier .csv c'est tout simplement un fichier texte. Chaque ligne correspond à une association et chaque variable est séparée par un séparateur (souvent une virgule, ou un point-virgule ou une tabulation). Vous pouvez ouvrir ce fichier dans Libre Office Calc ou Only Office Desktop Editor(ou possiblement Microsoft Excel si vous préférez les solutions payantes et non-libres). Pour l'ouvrir dans R, il nous suffit de savoir quel est le séparateur, de connaître le nom du fichier et le dossier dans lequel il est placé.
+Un fichier CSV c'est tout simplement un fichier texte. Chaque ligne correspond à une association et chaque variable est séparée par un séparateur (souvent une virgule, ou un point-virgule ou une tabulation). Vous pouvez ouvrir ce fichier dans Libre Office Calc ou Only Office Desktop Editor(ou possiblement Microsoft Excel si vous préférez les solutions payantes et non-libres). Pour l'ouvrir dans R, il nous suffit de savoir quel est le séparateur, de connaître le nom du fichier et le dossier dans lequel il est placé.
 
-Ici, en ouvrant un des fichiers dans un éditeur de texte de type "Libre Office Writer ou Microsoft Word ou "Kate", on voit que chaque guillemet est séparée d'une autre guillement par un point-vrigule, c'est notre séparateur. Il nous suffit donc d'utiliser la fonction "read.csv2" qui permet d'ouvrir un fichier .csv séparé par un point-virgule. Pour vérifier, on demande de l'aide pour cette fonction.
+Ici, en ouvrant un des fichiers dans un éditeur de texte de type "Libre Office Writer ou Microsoft Word ou "Kate", on voit que chaque guillemet est séparée d'une autre guillemet par un point-virgule, c'est notre séparateur. Il nous suffit donc d'utiliser la fonction "read.csv2" qui permet d'ouvrir un fichier .csv séparé par un point-virgule. Pour vérifier, on demande de l'aide pour cette fonction.
 ```{r}
 ?read.csv2
 ```
-On voir dans "Usage" la fonction "read.csv2". L'argument qui nous intéresse est "sep" puisqu'est écrit que "sep" est le *field seprator character*  ou autrement dit ce qui sépare les variables. On voit que pour read.csv2, sep est bien un ";". On peut donc utiliser cette fonction. On va ouvrir le fichier pour le Département du Finistère (29), qu on va enregistrer dans notre session R comme l'objet intutlé "asso29".
+On voir dans "Usage" la fonction "read.csv2". L'argument qui nous intéresse est "sep" puisque il est écrit que "sep" se trouve être le *field seprator character*  ou autrement dit ce qui sépare les variables. On voit que pour read.csv2, sep est bien un ";". On peut donc utiliser cette fonction. On va ouvrir le fichier pour le Département du Finistère (29), qu on va enregistrer dans notre session R comme l'objet intitulé "asso29".
 
 ```{r}
 asso29 <- read.csv2("data/associations/rna_import_20200901_dpt_29.csv")
@@ -55,7 +55,7 @@ dim(asso29)
 
 ```
 
-On voudrait faire de même pour tout les départements bretons. On les ouvre donc séparément, puis on les combine en un unique dataframe *assoBZH* [Voir plus loin pour une méthode permettant d'ouvrir tous les dataframes d'un coup].
+On voudrait faire de même pour tout les départements bretons. On les ouvre donc séparément, puis on les combine en un unique tableau de données *assoBZH* [Voir plus loin pour une méthode permettant d'ouvrir tous les dataframes d'un coup].
 
 ```{r}
 asso56 <- read.csv2("data/associations/rna_import_20200901_dpt_56.csv")
@@ -65,7 +65,7 @@ assoBZH <- rbind(asso22, asso29, asso35, asso56)
 rm(asso22, asso29, asso35, asso56)
 ```
 
-On voit grâce à la fonction *dim* ci-dessus qu'ona "1" lignes (ou associations) et 24 variables pour l'objet *asso29*. Affichons les 5 premières lignes et les 5 premières variables pour voir à quoi cela ressemble.
+On voit grâce à la fonction *dim* ci-dessus qu'on a "1" ligne (ou association) et 24 variables pour l'objet *asso29*. Affichons les 5 premières lignes et les 5 premières variables pour voir à quoi cela ressemble.
 ```{r}
 head(assoBZH, n = 5)[,1:5]
 ```
